fix(ARC-3505): make messages 80% wide on mobile

--- a/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestConversation.module.scss
+++ b/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestConversation.module.scss
@@ -35,6 +35,10 @@ $rich-text-editor-height-desktop: 20rem;
 		display: flex;
 		flex-direction: column;
 
+		@media (max-width: abstracts.$breakpoint-lg) {
+			width: 80%;
+		}
+
 		&--own {
 			background-color: abstracts.$teal-medium;
 			margin-left: auto;
